--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "devDependencies": {
     "jest": "^29.7.0",
     "vitest": "^3.2.1"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
